infra-temp-6/_AWS_Terragrunt/infra-live-v1/dev/vpc/04-NAT.tf
resource "aws_eip" "nat" {

  tags = {
    Name = "dev-nat"
  }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_us_east_1a.id

  tags = {
    Name = "dev-nat"
  }

  depends_on = [ aws_internet_gateway.igw ]
}
